@@ -5,8 +5,6 @@ package edu.colorado.phet.simtemplate.defaults;
 import java.awt.Dimension;
 import java.awt.geom.Point2D;
 
-import edu.colorado.phet.simtemplate.model.SimTemplateClock;
-
 /**
  * ExampleDefaults contains default settings for ExampleModule.
  *
@@ -22,7 +20,6 @@ public class ExampleDefaults {
     public static final int CLOCK_FRAME_RATE = GlobalDefaults.CLOCK_FRAME_RATE;
     public static final double CLOCK_DT = GlobalDefaults.CLOCK_DT;
     public static final int CLOCK_TIME_COLUMNS = GlobalDefaults.CLOCK_TIME_COLUMNS;
-    public static final SimTemplateClock CLOCK = new SimTemplateClock( CLOCK_FRAME_RATE, CLOCK_DT );
     
     // Model-view transform
     public static final Dimension VIEW_SIZE = new Dimension( 1500, 1500 );
