@@ -1,3 +1,4 @@
+12/22/08: #1058, add developer control and an extra module for testing tab colors
 # 0.10.01 (26536) 12-03-2008
 Testing build process
 # 0.10.00 (26391) 11-20-2008
